[package]
name = "wasm-prover"
version = "0.1.0"
edition = "2018"
licence = "GPL 3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
# wasm dependencies
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["console"]}

# crypto dependencies
rand_chacha = "0.2.2"
rand = { version = "0.7.3", features = ["wasm-bindgen"]}
rand_xorshift = { version = "0.2" }

ark-groth16 = { version = "0.2.0", default-features = false, features = [ "r1cs" ] }
ark-r1cs-std = { version = "0.2.0", default-features = false }
ark-relations = { version = "0.2.0", default-features = false }
ark-ed-on-bls12-381 = { version = "0.2.0", default-features = false, features = [ "r1cs" ] }
ark-bls12-381 = { version = "0.2.0", default-features = false, features = [ "curve" ] }
ark-crypto-primitives = { version = "0.2.0", features = [ "r1cs" ] }
ark-ff = { version = "0.2.0", default-features = false, features = [ "asm" ] }
ark-poly = { version = "0.2.0", default-features = false }
ark-poly-commit = { version = "0.2.0", default-features = false }
ark-serialize = { version = "0.2.0", default-features = false, features = [ "derive" ] }

blake2 = { version = "0.9", default-features = false }

# manta dependencies
manta-crypto = {version = "3.0.0", git="https://github.com/Manta-Network/manta-crypto.git"}